--- a/views/posts.pug
+++ b/views/posts.pug
@@ -1,30 +1,19 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title #{title}
-        link(rel="stylesheet", href="/style/output.css")
-    body 
-    header 
-      nav(class='flex justify-between items-center container mx-auto p-2') 
-        ul(class='flex items-center gap-x-4')
-          li
-            a(href=google) Google
-          li
-            a(href=amazon) Amazon
-        ul(class='flex items-center gap-x-4')
-          li(class='bg-sky-300 p-2 rounded-md hover:scale-110 transition-transform duration-150 hover:cursor-pointer ease-out') Training
-          li(class='bg-sky-300 p-2 rounded-md hover:scale-110 transition-transform duration-150 hover:cursor-pointer ease-out') Express.js + PUG
-    body
-        ul
+include components/header.pug
+main(class="container mx-auto px-2 py-20")
+    div 
+        ul(class="flex flex-col")
             each val, key in postsList
-                li 
-                    h2= val.title
-                    p= val.description
-                    img(src=`/img/${val.img}`, alt=val.title)
-                    div(class="flex items-center gap-x-2")
-                        each tag in val.tags
-                            span= tag
+                li(class="flex items-start gap-x-3")
+                    div
+                        figure(class='w-[200px] rounded-md overflow-hidden')
+                            img(class="w-full h-auto")(src=`/img/${val.img}`, alt=val.title)
+                    div 
+                        h2= val.title
+                        p= val.description
+                        div(class="flex items-center gap-x-2")
+                            each tag in val.tags
+                                span= tag
+
                         
 
         
