--- a/public/style/input.css
+++ b/public/style/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.input-error{
+    @apply border-red-400 bg-rose-200 focus:border-red-400 focus:ring-1 focus:ring-red-400;
+}
